# acts

./: CMakeLists.txt
CI/: setup_cvmfs_lcg.sh  setup_cvmfs_lcg103.sh
CI/clang_tidy/: requirements.txt
CI/fpe_masks/: requirements.txt
Core/: CMakeLists.txt
Core/include/Acts/EventData/: SpacePointContainer.hpp  SpacePointContainer.ipp  SpacePointData.hpp  SpacePointData.ipp  SpacePointProxy.hpp  SpacePointProxy.ipp
Core/include/Acts/LdmxEDM/: LdmxSpacePoint.hpp
Core/include/Acts/Seeding/: FilterStrategy.hpp  SeedFinder.hpp  SeedFinder.ipp  SeedFinderConfig.hpp  SeedToTrackParamMaker.hpp  SeedToTrackParamMaker.ipp  Seedfinder.ipp
Core/include/Acts/Vertexing/: FullBilloirVertexFitter.ipp  HelicalTrackLinearizer.hpp  HelicalTrackLinearizer.ipp  ImpactPointEstimator.hpp  ImpactPointEstimator.ipp
Core/src/Geometry/: CuboidVolumeBuilder.cpp  LayerCreator.cpp
Core/src/Seeding2/: CylindricalSpacePointGrid2.cpp  DoubletSeedFinder.cpp  TripletSeedFinder.cpp  TripletSeeder.cpp
Core/src/Surfaces/detail/: AlignmentHelper.cpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Printers/: CMakeLists.txt
Examples/Algorithms/TelescopeSeeding/: CMakeLists.txt
Examples/Algorithms/TelescopeSeeding/include/ActsExamples/TelescopeSeeding/: TelescopeSeedingAlgorithm.hpp
Examples/Algorithms/TelescopeSeeding/src/: #TelescopeSeedingAlgorithm.cpp#  TelescopeSeedingAlgorithm.cpp
Examples/Algorithms/TrackJets/: CMakeLists.txt
Examples/Algorithms/TrackJets/include/ActsExamples/TrackJets/: TrackJetsAlgorithm.hpp  VertexingHelpers.hpp
Examples/Algorithms/TrackJets/src/: TrackJetsAlgorithm.cpp
Examples/Io/Root/: CMakeLists.txt
Examples/Python/: CMakeLists.txt
Examples/Python/src/: ModuleEntry.cpp  Output.cpp  TrackFinding.cpp  TrackJets.cpp  TruthTracking.cpp
Examples/Python/tests/: requirements.txt
Examples/Run/: CMakeLists.txt
Examples/Run/Geometry/: CMakeLists.txt  Telescope.cpp
Examples/Run/Tracking4D/: CMakeLists.txt  TrackJetsExample.cpp
Examples/Scripts/: requirements.txt
Examples/Scripts/MaterialMapping/: Mat_map.C
Examples/Scripts/Python/: jets_chain.py  liteReco_odd.py  truth_tracking_kalman.py
Plugins/Root/: CMakeLists.txt
Plugins/Root/src/: BluePrintBuilder.cpp  TGeoDetectorElement.cpp
Python/Examples/python/: reconstruction.py
Python/Examples/tests/: requirements.txt
Tests/Core/Geometry/: CuboidVolumeBuilderTests.cpp
Tests/UnitTests/: CMakeLists.txt
cmake/: ActsConfig.cmake.in
docs/: requirements.txt
docs/plugins/: root.rst
(+37 files in other folders)
